# thermo-raw

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.py
.claude/commands/: release.md
.github/workflows/: build.yml  release.yml
apps/backend/: Dockerfile  icon.icns  pyproject.toml  thermocharts.spec  thermoraw.spec
apps/backend/src/thermo_raw/: __init__.py  main.py
apps/backend/src/thermo_raw/api/: files.py  plots.py  trailer.py
apps/backend/src/thermo_raw/services/: converter.py  mzml.py  trailer.py  updater.py
apps/backend/src/thermo_stats/: __init__.py  main.py
apps/backend/src/thermo_stats/services/: converter.py  mzml.py
apps/frontend/: index.html  package-lock.json  package.json
apps/frontend/src/: App.tsx  index.css  main.tsx
apps/frontend/src/components/: BokehPlot.tsx  DatapointControls.tsx  FileSelector.tsx  FilterCard.tsx  Layout.tsx  Loader.tsx  SettingsDropdown.tsx  StatCard.tsx  TrailerExtra.tsx  UpdateBanner.tsx  UploadDialog.tsx
apps/frontend/src/components/ui/: button.tsx  card.tsx  checkbox.tsx  input.tsx  select.tsx  slider.tsx  tabs.tsx
apps/frontend/src/hooks/: useUpdateCheck.ts
apps/frontend/src/lib/: api.ts  theme.tsx  utils.ts
apps/frontend/src/pages/: AnalysisPage.tsx  ExplorerPage.tsx  OverviewPage.tsx  RangeExtractTab.tsx
scripts/: build-standalone.bat  build-standalone.sh
src/: app.py
